<resources>
    <string name="app_name">抱抱团</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="protocol">尊敬的用户，在使用抱抱团前，请您仔细阅相关服务条款。如您开始使用抱抱团时，即视为您已了解并完全同意本服务条款各项内容，包括对服务条款所做的任何修改，并自愿成为抱抱团业务的客户（以下简称“客户”）</string>
    <string name="protocol2">1、客户隐私制度
 \u0009\u0009对于抱抱团在客户注册、使用抱抱团相关服务过程中所获知的客户姓名、住址、通信地址、帐号及密码等信息、资料（统称“客户信息”），抱抱团将采取合理的安全手段予以保护。在未得到客户许可或授权之前，除非根据法律规定或政府强制要求，或因善意确信这样的作法符合下列任一项，抱抱团不会将客户信息提供给任何第三方（包括公司或个人）：
 （1）保障客户正常使用抱抱团服务之需；
 （2）保护抱抱团的知识产权或其他重要权利；
 （3）在紧急的情况下，竭力维护客户个人和社会大众的隐私安全之需。
 2、服务条款的修改
 \u0009\u0009抱抱团有权在必要时通过在网页上发布公告等合理方式修改本服务条款及各单项服务的相关条款。客户应及时查阅了解修改的内容，并自觉遵守修改后的服务条款及各单项服务的相关条款。如客户继续使用服务，则视为客户已同意修改的内容；如客户不同意修改内容，则有权停止使用相应服务。
 3、服务的变更或终止
 （1）客户或抱抱团可随时根据实际情况中断使用/提供抱抱团服务，且均不向对方承担任何责任。
 （2）对于抱抱团服务状态的任何变更，抱抱团不担负事先通知义务。
 4、客户的帐号、密码和安全性
 （1）客户一旦注册成功，将得到一个抱抱团的密码和帐号。因客户未保管好自己的帐号和密码而对客户自身、抱抱团或第三方造成的损害，由客户承担全部责任。
 （2）客户应当对其帐号的所有活动和事件负全责。客户同意，若发现任何非法使用其帐号或存在任何安全漏洞的情况，有义务立即告知抱抱团相关负责人。
 5、通知
 \u0009\u0009抱抱团将通过消息推送或在网站显著位置公告的方式，向客户发送各项通知，包括但不限于抱抱团服务条款的修改、服务变更、或其它重要事情。同时，保留对申请了抱抱团的客户投放商业性广告的权利。
 6、免责声明
 （1）客户明确同意使用抱抱团服务的风险由客户承担。抱抱团明确表示不提供任何类型的担保，不论是明确的或隐含的。抱抱团将尽力维护客户使用抱抱团服务的合法权益，但不担保抱抱团服务一定能满足客户的要求，也不担保服务的及时性、安全性、真实性、稳定性、正确性。对客户使用该等服务中出现的信息（包括但不限于客户发布的信息）删除或储存失败，抱抱团亦不承担任何责任。
 （2）客户理解并接受下载或通过相应产品服务取得的任何信息资料取决于客户自己，并自行承担系统受损、资料丢失以及其它任何风险。抱抱团对客户在互联网上得到的任何商品购物服务、交易进程、招聘信息等，都不作担保。
 （3）抱抱团对直接、间接、偶然、特殊及继起的损害不负责任，这些损害来自：不正当使用抱抱团服务及/或应用服务，在网上购买商品或类似服务，在网上进行交易，非法使用服务或客户传送的信息有所变动。
 （4）抱抱团对本项服务下涉及的境内外基础电信运营商的电信通信网络的故障、技术缺陷、覆盖范围限制、不可抗力、计算机病毒、黑客攻击、客户所在位置、客户关机或其他非抱抱团技术能力范围内的事因等造成的服务中断、内容丢失、出现乱码、错误接收、无法接收、迟延接收不承担责任。
 （5）抱抱团保留判定客户的行为是否符合本服务条款要求的权利，如果客户违背了本服务条款的规定，抱抱团有权中止或者终止相应抱抱团服务。
 （6）转户规定：如果客户将手机号码、转让给他人，请客户提前自行删除抱抱团内资料。否则，受让该号码的客户将能够查看您的客户个人数据。抱抱团不承担由此引发的客户数据丢失等责任及纠纷。
 7、抱抱团服务使用条款
 （1）客户使用抱抱团可选择相应增值服务，按实际发生数收取相应增值服务费用。
 （2）客户注册抱抱团的，则视为接受抱抱团中各种免费功能开启或关闭的初始设置状态，客户可自行调整功能服务设置的开启和关闭。
 （3）客户注册抱抱团的，则视为同意接收来自抱抱团的相关市场营销、产品信息、客户服务信息、商业性广告等通知，客户可自行删除此类通知。
 （4）客户权限管理
 （i）禁止发送垃圾信息、垃圾广告：客户对通过抱抱团所发送的资料和信息，以及所实施的各项行为承担一切法律责任。客户不得利用抱抱团散布和传播反动、色情或其他违反国家法律、道德的资料、信息。客户承诺不传输任何非法的、骚扰性的、中伤他人性的、辱骂性的、恐吓性的、伤害性的、庸俗的、宣传的、淫秽的等资料、信息。另外，客户也不能传输任何教唆他人构成犯罪行为的资料、信息；不能传输涉及国家安全的资料、信息；不能传输任何不符合当地法规、国家法律和国际法律的资料、信息，否则抱抱团有权单方随时终止对客户的抱抱团服务，并追究客户的其他违约和法律责任。
 （ii）网络通信费说明：客户在使用本服务时，将使用网络接入服务，客户必须自行支付网络通信费用，如手机上网产生的流量费、短信上行产生的信息费、宽带上网网络月租费等；此外，客户必须自行配备及负责与各网络连线所需之一切必要装备，如计算机、手机等装置。
 8、适用法律及管辖
 1、本服务条款应符合中华人民共和国法律规定，与中国法律相抵触的部分无效，但不影响其他部分的效力。
 2、客户和抱抱团一致同意接受被告所在地有管辖权的人民法院管辖。"
</string>
    <string name="xieyineirong">  挂科险是博悦公司推出的一项为广大前来报名辅导班的学生提供保驾护航的服务。\n\n本着双方互利共赢的原则，特拟以下协议，需双方共同遵守。\n\n1、保险责任和免除责任\n保险责任：若被保险人在保险期间内的参加我公司开设的辅导班后考试挂科，那么保险人给付赔偿金。赔偿标准详见第5项：保险金及其支付办法。保险金范围仅限于约定的赔偿金不包括其他费用。\n保险人赔偿或给付保险金的责任范围包括：损害发生在保险责任内；保险责任发生在保险期限内；以保险金额为限度。\n
保险人责任免除：有以下情形时，免除保险人责任：\n
①弄虚作假，利用技术手段篡改成绩的。\n
②故意不参加考试的。\n
③因意外事件、不可抗力等事件导致试卷丢失或者被保险人无法参加考试的。\n
④申请缓考、请假的没参与考试。\n
⑤考试中采取作弊手段，被通报、批评的。\n
⑥采取替考等手段，非被保险人亲自参加考试的。\n
⑦因老师批阅错误导致挂科，在经过申请修改之后，成绩是可以通过考试的。\n
⑧被保险人因为旷课、逃课等原因被不允许参加考试的。\n
⑨其他应当免除责任的情形。\n\n
2、保险期间和保险责任开始时间\n
保险期间：签订保险合同的这一个学期(关于学期的计算以各高校学期校历为准)
保险责任开始时间：自签订之日起保险合同成立，投保人按约缴纳保险费之后，保险人按照约定的时间开始承担保险责任。\n
3、保险金额\n
本专业必修课（包括院内限选课）按照30元/科进行赔付。最高不超过200元。\n
双学位必修课（包括院内限选课）按照30元/学分进行赔付。最高不超过200元。\n
4、保险费以及支付办法\n
在合同签订之后，投保人应按约一次性缴足保险费。按照投保项目的不同。投保专业必修课（包括院内限选课）的按照10元/科收费。投保双学位必修课（包括院内限选课）的按照10元/学分收费。\n
支付办法：现金或者银行转账\n
5、保险金赔偿或者或者给付办法\n
本专业的必修课（包括院内限选课）：30元/科 最高不超过200元人民币。\n
双学位必修课（包括院内限选课）：10元/学分 最高不超过200元人民币。\n
支付办法: 当发生合同约定的保险事件之后，有保险公司进行审核。在接受赔付申请之后应在3个工作日内审核完毕。确认赔付之后，应在5个工作日内交付给受益人手中。不在本地的受益人可以采用银行转账汇款的方式进行理赔。\n
6、违约责任和争议处理\n
①双方之间关于本合同的一切争议应首先通过协商解决，如果协商不成可以通过法律途径解决问题。\n
②保险的赔付出现争议的，本保险机构有权选择管辖法院。\n
</string>
    <string name="about_us">　　本应用是桂林抱抱团科技有限公司推出的一款社交+团购应用，只要你注册成为用户就可以向附近的人寻求学习上的帮助，并可以组队学习等。你也可以在购买产品的同时通过社交模块一起组队报名，并且可以拿到更优惠的价格。</string>
    <string name="opinion_hint">留下您的宝贵意见，我们将持续改进产品(最多不能超过300字)</string>
    <string name="link_hint">请输入联系方式</string>
    <string name="keyword">请输入要查询的城市的汉字或字母</string>
    <string name="library_keyword">请输入要查询的课程资料</string>
    <string name="dangmianfudizhi">桂电花江校区报名交款地址：\n大学生创新创业综合实践基地创业孵化室博悦工作室\n抱抱团花江校区交流群：108228268\n客服电话：15078332282\n技术咨询：18593279185\n温馨提醒：付款后记得拿好相关的发票哟，亲~</string>
    <string name="copy_right">Copyright©2014–2015抱抱团科技版权所有</string>
    <string name="erweima">扫描二维码，您的朋友也可下载抱抱团！</string>
    <string name="jifentv1">1、积分是什么</string>
    <string name="jifentv1_1">\u3000用户通过抱抱团的一系列合法操作行为，能够获得奖励的一种虚拟分值，称为积分。</string>
    <string name="jifentv2">2、积分获得方式</string>
    <string name="jifentv2_1">1.签到积分规则</string>
    <string name="jifentv2_1_1">\u3000\u3000用户签到采取累积积分模式，当用户在一段时间内，每天都连续签到，当天签到的积分为上一次积分加1，新用户第一次签到为1分。当用户不能连续签到，下次签到单次所获积分从1分开始，之前的积分不清零。例：小明为新用户，连续三天签到，所得积分为：1+2+3=6。第四天没有签到，第五天才签到，则第五天当天的签到所得积分从1开始。即，小明在这5天总共得积分为：5+1=6。以此类推。本规则最终解释权归抱抱团科技所有。</string>
    <string name="jifentv2_2">2.消费积分规则</string>
    <string name="jifentv2_2_1">\u3000\u3000用户在平台上进行消费，每购买一次课程，即可获得相应的积分。课程金额*5%=积分数。例如：小明购买400的课程，可获得20个积分。以此类推。</string>
    <string name="jifentv2_3">3.登陆积分规则</string>
    <string name="jifentv2_3_1">\u3000\u3000新用户注册登陆app。可获得50个积分。</string>
    <string name="jifentv2_4">4.分享积分规则</string>
    <string name="jifentv2_4_1">\u3000\u3000用户把自己的积分数额分享到其他设计媒体平台。每次可获得5个积分。</string>
    <string name="jifentv3">3、如何查询积分</string>
    <string name="jifentv3_1">\u3000登陆后，在您的积分商城中查看您的累积积分。</string>
    <string name="jifentv4">4、积分可以干什么</string>
    <string name="jifentv4_1">\u3000用户可以使用一定量的积分，兑换并下载抱抱团提供的资料。</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="loading">加载中...</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="select_a_friend">请选择一个朋友</string>
    <string name="web">官方网址</string>
    <string name="list_friends">%s的朋友</string>
    <string name="feedwebsite">http://www.bbtuan.com</string>
    <string name="dialog_reg_word1">\u30001.严禁发布与我国政治人物有关的图片。</string>
    <string name="dialog_reg_word2">\u30002.严禁发布恐怖血腥，恶心的图片。</string>
    <string name="dialog_reg_word3">\u30003.严禁发布严重违规的图片。</string>
    <!-- 下拉刷新，上拉加载更多 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
