<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent">
    <include layout="@layout/top_bar_btn" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:scrollbars="none">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_item_font_14"
        android:text="@string/jifentv1"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_item_font_14"
        android:text="@string/jifentv1_1"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_item_font_14"
        android:text="@string/jifentv2"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_item_font_14"
        android:text="@string/jifentv2_1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_item_font_14"
        android:text="@string/jifentv2_1_1"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_item_font_14"
        android:text="@string/jifentv2_2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_item_font_14"
        android:text="@string/jifentv2_2_1"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_item_font_14"
        android:text="@string/jifentv2_3"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        /><TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/style_item_font_14"
    android:text="@string/jifentv2_3_1"
    android:layout_marginTop="5dp"
    /><TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/style_item_font_14"
    android:text="@string/jifentv2_4"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/style_item_font_14"
    android:text="@string/jifentv2_4_1"
    android:layout_marginTop="5dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_item_font_14"
        android:text="@string/jifentv3"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_item_font_14"
        android:text="@string/jifentv3_1"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_item_font_14"
        android:text="@string/jifentv4"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_item_font_14"
        android:text="@string/jifentv4_1"
        android:layout_marginTop="5dp"
        />
    </LinearLayout>
    </ScrollView>
</LinearLayout>