<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
              xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include layout="@layout/top_bar_btn" />
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout android:gravity="center"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <ImageView
                           android:id="@+id/iv_qrcode"
                           android:layout_margin="20dp"
                           android:layout_width="200dp"
                           android:layout_height="200dp"
                           android:src="@mipmap/ic_ceshi_head" />
                <TextView android:gravity="center"
                          android:layout_width="150.0dip"
                          android:layout_height="wrap_content"
                          android:text="@string/erweima" />
            </LinearLayout>
            <LinearLayout android:gravity="center"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <TextView android:gravity="center"
                          android:paddingTop="20.0dip"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/web" />
                <TextView android:textColor="@color/bg_main"
                          android:gravity="center" android:id="@+id/website" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedwebsite" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="bottom|center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="150.0dip" android:layout_height="wrap_content" android:text="@string/copy_right" />
    </LinearLayout>
</LinearLayout>